--- a/QO/Polimeros/Polimeros.org
+++ b/QO/Polimeros/Polimeros.org
@@ -1,15 +1,75 @@
-* Polímeros
 
 #+begin_comment
 https://santamaria.pucminas.br/wp-content/uploads/2020/03/EXERC%C3%8DCIOS-DE-REVIS%C3%83O-DE-QU%C3%8DMICA-ORG%C3%82NICA-3.%C2%AA-S%C3%89RIE-EM-2020.pdf
 
 https://colegiohms.com.br/blog/wp-content/uploads/2023/03/exercicios-de-HIBRIDIZACAO.pdf
 
+https://edisciplinas.usp.br/pluginfile.php/6551011/mod_resource/content/1/Aula%202%20-%20Material%20em%20slide.pdf
 
-http://paginapessoal.utfpr.edu.br/emanuele/quimica-5-1/quimica-5/Aula_8_Alcool_Fenol_aldeido.pdf
+https://edisciplinas.usp.br/pluginfile.php/6551009/mod_resource/content/2/Aula%201%20-%20Material%20em%20slide.pdf
 
 #+end_comment  
 
 * Polímeros 
 
 ** Definição
+
+- Moléculas relativamente grandes, com massa molecular entre \num{e3} e \num{e6} g/mol, cuja estrutura é constituída de unidades químicas simples repetidas, conhecidas como *“meros”* 
+
+#+begin_export latex
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\scalebox{0.5}{
+\resetchemfig
+{\bfseries Poliestireno}
+\chemfig{H-[:270]C(-[:270]=_[:330]-[:270]=_[:210]-[:150]=_[:90]-[:30])(%
+-[:180]C(-[:90]H)(-[:270]H)-[:180]H)-[@{op,.2}]C(-[:90]H)(-[:270]H)-C(-[:90]=^[:30]%
+-[:90]=^[:150]-[:210]=^[:270]-[:330])(-[:270]H)-[@{cl,.5}]C(-C(-H)([:270]-H)-[:90]H)%
+(-[:90]H)-[:270]=^[:210]-[:270]=^[:330]-[:30]=^[:90](-[:150])}
+\polymerdelim[delimiters ={[]}, height = 15pt, depth = 15pt, indice = n]{op}{cl}
+\chemmove{
+\node (n1) [rectangle, fill=purple, draw=purple,fill opacity=.2,    rounded corners=2pt, minimum width=0.65cm, minimum height = 1.4cm, fit=(op) (cl)]  {};
+\node (text1) [below = 2cm of n1,draw,font={\bfseries\large},blue]   {Mero};
+% \draw[fill=purple, draw=purple,fill opacity=.2,    rounded corners=2pt, fit=(op) (cl) ]
+%	([xshift=-3pt,yshift=21pt]op.north west) 
+%	rectangle 
+%	([xshift=8pt,yshift=-20pt]cl.south);
+\draw[blue,-latex,thick] (n1) --(text1);
+}
+}
+\end{column}
+\begin{column}{0.55\textwidth} 
+\begin{bclogo}[couleur=yellow!30,arrondi=0.1,logo=\bccrayon]{Observação}
+\small
+Qualquer molécula com “meros” é um polímero, porém esse termo torna-se mais adequado quando a molécula atinge um determinado tamanho que torne mais evidentes as suas propriedades
+\end{bclogo}
+\end{column}
+\end{columns}
+#+end_export
+
+
+#+ATTR_LATEX: :options [couleur=yellow!30,arrondi=0.1,logo=\bccrayon]{Macromoléculas}
+#+begin_bclogo
+\small
+Moléculas muito grandes, formadas por uma grande quantidade de átomos (de 1000 a um valor ilimitado).
+#+end_bclogo
+
+** Carboidratos
+
+#+begin_export latex
+\chename{
+\chemfig[cram width=2pt,atom style={scale=0.75}]{
+    -[@{l}:10]
+    ?[a]<[:-50](-[:170]HO)
+    -[:10,,,,line width=2pt,line cap=round](-[:-50]OH)
+    >[:-10](-[:130]O-[:190](?[a])-[:130]-[:50]OH)
+    -[:10]O-[:-10]
+    ?[c]<[:10](-[:230]-[:310]OH)
+    -[:-10,,,,line width=2pt,line cap=round]O
+    >[:50](-[:190](-[:50]OH)-[:170](?[c])-[:190]HO)
+    -[:-10]O-[@{r}:10]
+}}{Celulose}
+\polymerdelim[delimiters={[]},open xshift=-0.75em,close xshift=-0.5em,
+    height=3em,depth=4.5em,indice=n]{l}{r}
+
+    #+end_export
