--- a/FQ/Radioatividade/Radioatividade.org
+++ b/FQ/Radioatividade/Radioatividade.org
@@ -1,3 +1,5 @@
+#+TITLE: Radioatividade
+
 * Radioatividade
 
 ** Radioatividade
@@ -22,7 +24,7 @@
 
 #+ATTR_LATEX: :float wrap :width 0.38\textwidth :placement {l}{0.5\textwidth}
 #+CAPTION: Marie Curie
-\vspace{-1.5cm}
+\vspace{-1.0cm}
 [[./Marie.jpeg]]
 
 Marie Skłodowska Curie foi uma cientista polonesa com naturalização francesa que conduziu pesquisas pioneiras no ramo da radioatividade. Foi a primeira mulher a ser laureada com um Prémio Nobel e a primeira pessoa e única mulher a ganhar o prêmio duas vezes. Em 1903, Marie dividiu o Nobel de *Física* com o seu marido Pierre Curie e o físico Henri Becquerel. A cientista também foi laureada com o Nobel de *Química* em 1911.
@@ -61,22 +63,52 @@ A  radiação  é  a  propagação  de  energia  sob  várias  formas.  Dependen
 
 
 
-* Partículas
+** Partículas
 
-** 
+*** Partículas
+   :PROPERTIES:
+   :BEAMER_col: 0.45
+   :END:
+
+
 #+begin_center
 
-|-----------+---------------|
-| PARTÍCULA | SÍMBOLO       |
-|-----------+---------------|
-| PRÓTON    | $\rm _1P^1$  |
-| NÊUTRON   | $_0n^1$       |
-| PRÓTIO    | $_1P^1$       |
-| DEUTÉRIO  | \isotope{2,H} |
-| TRÍTIO    | \isotope{3,H} |
+|-----------+----------------------|
+| PARTÍCULA | SÍMBOLO              |
+|-----------+----------------------|
+| PRÓTON    | $\rm _1P^1$          |
+| NÊUTRON   | $_0n^1$              |
+| PRÓTIO    | $_1P^1$              |
+| DEUTÉRIO  | \isotope{2,H}        |
+| TRÍTIO    | \isotope{3,H}        |
 | PRÓSITON  | $_{+1}^0\upbeta^{+}$ |
-|-----------+---------------|
+|-----------+----------------------|
 #+end_center
+
+*** Equação                                                           :BMCOL:
+   :PROPERTIES:
+   :BEAMER_col: 0.45
+   :END:
+
+- Emissão de Posítron
+
+  #+begin_export latex
+  \begin{equation*}
+   _{+1}^1p \ch{->} _{+1}^{0}\upbeta + _0^{1}n
+   \end{equation*}
+  #+end_export 
+  
+- Absorção de um Elétron 
+
+  #+begin_export latex
+\begin{align*}
+  _{+1}^1p \ch{->} _{+1}^{0}\upbeta + _0^{1}n
+\end{align*}
+  #+end_export 
+
+#+ATTR_LATEX: :scale .2
+[[./EqNuclear.png]]
+
 
 **  Radiação Alfa ($\upalpha$)
 
@@ -157,7 +189,7 @@ A  radiação  é  a  propagação  de  energia  sob  várias  formas.  Dependen
     :PROPERTIES:
     :BEAMER_col: 0.45
     :END:
-
+\small
 
 - A radiação beta é subdividida em dois tipos, beta menos (\(\upbeta ^-\)) e pósitron (\(\upbeta ^+\)). As emissões do tipo \(\upbeta ^-\)- possuem a mesma característica dos elétrons atômicos, com a diferença que sua origem se dá no núcleo que possui um número excessivo de nêutrons sendo, portanto, instável.
 - Neste decaimento o nêutron se “transforma” em um elétron (ejetado) e um próton (este permanece no núcleo). Assim como a  radiação  alfa,  elementos  emissores  de  beta  menos  (\(\upbeta ^-\))  podem  ser  usados  no  tratamento de doenças. Exemplos: lutécio-177 (@@latex: \ch{^{177}Lu}),  ítrio-90 (\ch{^{90}Y})@@.
@@ -199,15 +231,15 @@ A  radiação  é  a  propagação  de  energia  sob  várias  formas.  Dependen
     :PROPERTIES:
     :BEAMER_col: 0.45
     :END:
-
+#+LATEX: \small{
 - Outro tipo de emissão beta é o pósitron (\(\upbeta ^+\)), que consiste na transformação de  um  próton  em  nêutron  e  pósitron  (antielétron),  uma  vez  que  o  núcleo  se  encontra  instável  devido  ao  número  elevado  de  prótons.
 - Após  sua  emissão  do  núcleo, os pósitrons são quase que instantaneamente aniquilados dando origem a dois fótons com mesma energia (511 keV) e direções opostas. Esse tipo de radiação é utilizado na medicina diagnóstica. Exemplo de radionuclídeos emissores de pósitrons: gálio-68 @@latex: (\ch{^{68}Ga}), flúor-18 (\ch{^{18}F})@@.
-
+#+LATEX}
 
 ** Radiação Gama
-
+#+LATEX: \small{
    A radiação *gama* (\(\gamma\)) é conceituada como ondas eletromagnéticas emitidas do núcleo de um átomo. Apresenta energia superiores e alto poder de penetração, enquanto que os raios X são menos energéticos. Exemplo de radionuclídeos emissores de radiação gama: @@latex: \ch{^{99m}Tc}, cobalto-60 (\ch{^{60}Co})@@.
-
+#+LATEX}
 
 
 
@@ -366,18 +398,19 @@ A atividade de uma amostra é definida pelo número de desintegrações por segu
 ** 
 
 \vspace{-1cm}
-#+ATTR_LATEX: :options {Exemplo}
-#+begin_boxex
+
+#+begin_question
+#+LATEX: \small{
 Um radioisótopo utilizado no tratamento radioterápico apresenta uma meia-vida (período de semidesintegração) de 5 horas. Se um técnico utilizar uma massa de 50 g no tratamento de um paciente, após quantas horas a massa seria reduzida para 6,25 g?
 
 a) 5 horas.  \quad b) 25 horas. \quad c) 15 horas. \quad d) 30 horas. \quad e) 10 horas.
 
-
+#+LATEX}
 #+ATTR_LATEX: :options {Solução}
 #+begin_myrule
 #+ATTR_LATEX: :options {0.5\textwidth}
 #+begin_minipage
-
+\small
 *1º Passo:* Calcular o número de meias-vidas que foram necessárias para a redução de 50 g para 6,25 g por meio da fórmula a seguir.
 
 #+begin_export latex
@@ -395,6 +428,7 @@ x= 3
 \hspace{0.05\textwidth}
 #+ATTR_LATEX: :options {0.4\textwidth}
 #+begin_minipage
+\small
 *2º Passo:* Em seguida, para calcular o tempo, basta utilizar a seguinte expressão:
 #+begin_export latex
 \begin{align*}
@@ -405,7 +439,7 @@ t = 15 ~ \text{h}
 #+end_export
 #+end_minipage 
 #+end_myrule
-#+end_boxex
+#+end_question
 
 
 * Reação Nuclear
@@ -497,7 +531,8 @@ A reação que ocorre nestas condições, isto é, alterando o núcleo do átomo
 ** 
 \vspace{-1cm}
 #+ATTR_LATEX: :options {Exemplo}
-#+begin_boxex
+#+begin_question
+\small
 Ao se desintegrar, o átomo \isotope{222,Rn} emite 3 partículas alfa e 4 partículas beta. O nº atômico e o nº de massa do átomo final são, respectivamente:
 
 a) 84 e 210. \qquad     b) 210 e 84.  \qquad    c) 82 e 210. \qquad    d) 210 e 82. \qquad    e) 86 e 208.
@@ -538,7 +573,7 @@ A = 210 \\
 
 #+end_myrule
 
-#+end_boxex
+#+end_question
 
 
 
@@ -706,7 +741,6 @@ O Tabela mostra os radiofármacos mais utilizados para tratamentos específicos.
 | GADOLÍNIO (@@latex: \isotope{159,Gd}@@) | estomâgo, sistema ósseo, fígado, rins, pulmão    |
 |-----------------------------------------+--------------------------------------------------|
 
-
 ** Fim da Aula
 
 
@@ -719,7 +753,7 @@ O Tabela mostra os radiofármacos mais utilizados para tratamentos específicos.
 \begin{center}
 \begin{tabular}{ccc}
 Download Aula & & Lista de Exercícios \\
- \qrcode[height=2in]{https://mark.nl.tab.digital/s/8ocJrDKNYRkxmfG} & & \qrcode[height=2in]{https://mark.nl.tab.digital/s/LQwiRJGiybMj32g}\\
+ \qrcode[height=2in]{https://github.com/fabinholima/AulaQuimicaPDF/blob/main/FQ/Radioatividade/Radioatividade.pdf} & & \qrcode[height=2in]{https://github.com/fabinholima/AulaQuimicaPDF/blob/main/FQ/Radioatividade/Lista_Radioatividade.pdf}\\
  \end{tabular}
  \end{center}
 #+end_export
@@ -731,7 +765,7 @@ Download Aula & & Lista de Exercícios \\
 Radioatividade 
 https://www.netflix.com/br/title/81168940
 
-*** Doccumentário 
+*** Documentário 
 
 O brilho da morte 
 https://youtu.be/gCcTxnvZb-k?si=ITvRVFqsry2oGc1A
